--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
 
-<?php
+<php
 // define variables and set to empty values
 $nameErr = $emailErr = $genderErr = $websiteErr = "";
 $name = $email = $gender = $comment = $website = "";
@@ -62,7 +62,7 @@ function test_input($data) {
   $data = htmlspecialchars($data);
   return $data;
 }
-?>
+>
 
 <h2>PHP Form Validation Example</h2>
 <p><span class="error">* required field.</span></p>
@@ -86,7 +86,7 @@ function test_input($data) {
   <input type="submit" name="submit" value="Submit">  
 </form>
 
-<?php
+<php
 echo "<h2>Your Input:</h2>";
 echo $name;
 echo "<br>";
@@ -97,7 +97,7 @@ echo "<br>";
 echo $comment;
 echo "<br>";
 echo $gender;
-?>
+>
 
 </body>
 </html>
